--- a/index.html
+++ b/index.html
@@ -26,13 +26,37 @@
         </p>
       </main>
       <aside class="grid__sidebar">
-        <h2>More Info</h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia
-          assumenda corrupti libero omnis nihil vel inventore culpa quod,
-          repellendus odit illum doloribus corporis ex laboriosam natus ut
-          voluptatem. Magni, sequi?
-        </p>
+        <div class="grid__widget--green">
+          <h2>More Info</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia
+            assumenda corrupti libero omnis nihil vel inventore culpa quod,
+            repellendus odit illum doloribus corporis ex laboriosam natus ut
+            voluptatem. Magni, sequi?
+          </p>
+        </div>
+        <div class="grid__widget--magenta">
+          <h2>Check out this cool thing!</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia
+            assumenda corrupti libero omnis nihil vel inventore culpa quod,
+            repellendus odit.
+          </p>
+        </div>
+        <div class="grid__widget--magenta">
+          <h2>More cool stuff is right there too!</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae
+            recusandae ut libero perspiciatis ducimus soluta ab, enim at.
+            Corporis rerum quo expedita, provident voluptates dolor voluptate
+            fugiat temporibus quos iusto inventore vero vel sequi delectus sit
+            eaque labore aliquam veniam perspiciatis dolores reprehenderit,
+            totam impedit? Quam esse autem ratione magni harum vel et cum nihil
+            amet facere placeat labore temporibus adipisci, alias animi eum
+            eligendi maxime. Excepturi amet velit non doloribus quo fuga porro,
+            quia animi tempora delectus incidunt tenetur!
+          </p>
+        </div>
       </aside>
     </div>
   </body>
